--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,11 @@
         android:theme="@style/Theme.Appi3"
         tools:targetApi="31">
         <activity
+            android:name=".teste"
+            android:exported="false" />
+        <activity
             android:name=".menu"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
