--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.4.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'com.google.firebase:firebase-database:20.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
-
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
     implementation platform('com.google.firebase:firebase-bom:31.0.1')
 
     testImplementation 'junit:junit:4.13.2'
