--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,15 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_uniestoque"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_uniestoque_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Appi3.NoActionBar"
         tools:targetApi="31">
+        <activity
+            android:name=".grafico"
+            android:exported="false" />
         <activity
             android:name=".lista_produtos"
             android:exported="false" />
